--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "Marcio Marques Soares",
   "license": "MIT",
   "dependencies": {
+    "@iota/client": "^3.0.0-rc.5",
+    "@iota/core": "^1.0.0-beta.30",
+    "@tanishq-singh/nanojs": "^0.1.3",
     "ansi-styles": "^6.1.0",
     "axios": "^0.27.2",
     "babel-cli": "^6.26.0",
@@ -22,8 +25,10 @@
     "babel-preset-latest": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "bcryptjs": "^2.4.3",
+    "cjs": "^0.0.11",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dateformat": "^5.0.3",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
@@ -52,6 +57,7 @@
     "@babel/plugin-transform-modules-commonjs": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@shelf/jest-mongodb": "^2.2.2",
+    "@types/mongodb": "^4.0.7",
     "babel-core": "^6.26.3",
     "babel-jest": "^28.1.0",
     "babel-polyfill": "^6.26.0",
